recursion.logo.square.FourSquare.scala.code
override def run() {
  for (k<-1 to 4) {
    forward(100.)
    left(90.)
  }
  right(100.)
  for (k <- 1 to 4) {
    forward(100.)
    left(90.)
  }
}